# gul

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
cmake/: CompilerWarnings.cmake  Coverage.cmake
include/gul/: CallEvery.h  Image.h  LinearMap.h  MeshPrimitive.h  MeshPrimitive2.h  ResourceLocator.h  ResourceManager.h  uri.h
include/gul/math/: Octree.h  Transform.h  aabb.h  frustum.h  geometry.h
include/gul/meta/: has_destructor.h
include/gul/net/: socket.h
include/gul/utils/: threadpool.h  writer_preferred_shared_mutex.h
test/: CMakeLists.txt  unit-CallEvery.cpp  unit-Image.cpp  unit-MeshPrimitive.cpp  unit-ResourceManager.cpp  unit-Transform.cpp  unit-linear-map.cpp  unit-octree.cpp  unit-reader-writer-lock.cpp  unit-test.cpp  unit-uri.cpp
